--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -2,11 +2,11 @@
 #  SPRING
 #==========================================
 info.app.name=app
-info.app.description=Ze Description
-info.app.version=1.0-SNAPSHOT
+info.app.description=Insidesoccer Application
+info.app.version=1.0
 
 spring.application.name=${info.app.name}
-spring.application.version=1.0-SNAPSHOT
+spring.application.version=1.0
 
 security.basic.enabled=false
 
