add insidesoccer asset URL prefix for attachments

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -25,6 +25,12 @@ blog.hostname=52.88.179.123
 blog.port=8080
 
 #==========================================
+#  INSIDESOCCER
+#==========================================
+insidesoccer.assset_url_prefix=http://www.insidesoccer.com/is5-asset
+
+
+#==========================================
 #  SERVER
 #==========================================
 server.port=8080
