add calendar service

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -18,11 +18,14 @@ endpoints.health.sensitive=false
 auth.hostname=52.27.243.115
 auth.port=8080
 
-party.hostname=52.88.21.229
-party.port=8080
-
 blog.hostname=52.88.179.123
 blog.port=8080
+
+calendar.hostname=52.24.48.106
+calendar.port=8080
+
+party.hostname=52.88.21.229
+party.port=8080
 
 #==========================================
 #  INSIDESOCCER
